--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'HE'
 - !lcsh 'Postal service -- United States'
+- GITenberg
 title: "Ten Years Among the Mail Bags\r\nOr, Notes from the Diary of a Special Agent\
   \ of the Post-Office Department"
 url: http://www.gutenberg.org/ebooks/40840
